--- a/sass/style.scss
+++ b/sass/style.scss
@@ -91,6 +91,10 @@ body {
     padding-right: 10px;
   }
 }
+.tags li{
+  display: inline-block;
+  padding-right: 10px;
+}
 
 /* Authors */
 
@@ -126,3 +130,19 @@ body {
   100% { opacity: 1; }
 }
 
+/* Tags */
+.tag-size-1 {
+  font-size: 12px;
+}
+.tag-size-2 {
+  font-size: 16px;
+}
+.tag-size-3 {
+  font-size: 20px;
+}
+.tag-size-4 {
+  font-size: 24px;
+}
+.tag-size-5 {
+  font-size: 28px;
+}
